--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.4
       with:
-        name: 'SDSService'
+        name: SDSService-${{ matrix.build_type }}
         # A file, directory or wildcard pattern that describes what to upload
         path: ${{github.workspace}}/build/${{ matrix.build_type }}/
