--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
+
+cmake_policy(SET CMP0091 NEW)
+enable_language(CXX)
 
 project(SchoolDigitalSignage)
 
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(CI_TEST test.cpp)
-set_property(TARGET CI_TEST PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set_property(TARGET CI_TEST PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
