--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ project(SchoolDigitalSignage)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(CI_TEST test.cpp)
-set_property(TARGET CI_TEST PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
+set_property(GLOBAL PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
