--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SDSService"]
 	path = SDSService
 	url = https://github.com/ProtoByter/windows-service
+[submodule "asio"]
+	path = asio
+	url = https://github.com/chriskohlhoff/asio
