--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,4 +30,4 @@ jobs:
       with:
         name: SDSService-${{ matrix.build_type }}
         # A file, directory or wildcard pattern that describes what to upload
-        path: ${{github.workspace}}/build/
+        path: ${{github.workspace}}/build/SDSService/${{ matrix.build_type }}/
