--- a/.github/workflows/t2.yml
+++ b/.github/workflows/t2.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: |
-         apt-get install git rsync cmake libc6-i386 lib32z1 lib32stdc++6 subversion gcc
+         sudo apt-get install git rsync cmake libc6-i386 lib32z1 lib32stdc++6 subversion gcc
 
          svn co http://svn2.exactcode.de/t2/trunk t2-trunk
          cd t2-trunk
