--- a/.github/workflows/Buildroot.yml
+++ b/.github/workflows/Buildroot.yml
@@ -46,3 +46,11 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          # Artifact name
+          name: image
+          # A file, directory or wildcard pattern that describes what to upload
+          path: $GITHUB_WORKSPACE/buildroot-2021.05/output/images/sdcard.img
