--- a/.github/workflows/Buildroot.yml
+++ b/.github/workflows/Buildroot.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           wget https://buildroot.org/downloads/buildroot-2021.05.tar.bz2
           tar xf buildroot-2021.05.tar.bz2
-          ls -la
+          ls -la buildroot-2021.05
       
       - name: Copy configuration file
         run: |
