--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "asio"]
 	path = asio
 	url = https://github.com/chriskohlhoff/asio
+[submodule "SDSClient/sdl2-cmake"]
+	path = SDSClient/sdl2-cmake
+	url = https://github.com/tcbrindle/sdl2-cmake-scripts.git
