--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,18 @@ project(SchoolDigitalSignage)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(SDSService)
+option(BUILD_SERVICE "Build the *Windows* Service - this won't build on anything other than Windows" ON)
+option(BUILD_CLIENT "Build the Linux Client - requires SDL2 to be installed" ON)
+option(BUILD_GUI "Build the C# GUI - Not currently implemented" OFF)
+
+if (BUILD_SERVICE)
+	add_subdirectory(SDSService)
+endif()
+
+if (BUILD_CLIENT)
+	add_subdirectory(SDSClient)
+endif()
+
+if (BUILD_GUI)
+	add_subdirectory(SDSGUI)
+endif()
