--- a/.github/workflows/Buildroot.yml
+++ b/.github/workflows/Buildroot.yml
@@ -9,7 +9,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  pi4_build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -30,7 +30,7 @@ jobs:
       
       - name: Copy configuration file
         run: |
-          cp $GITHUB_WORKSPACE/Buildroot/.config $GITHUB_WORKSPACE/buildroot-2021.05
+          cp $GITHUB_WORKSPACE/Buildroot/.config_pi4 $GITHUB_WORKSPACE/buildroot-2021.05
           
       - name: Build buildroot image
         run: |
