--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -40,7 +40,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-      submodules: 'recursive'
+      with:
+        submodules: 'recursive'
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
